# sittling-sofa-shg-flutter

./: .editorconfig  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: build-apk.md  reimport-data.md
backend/: .env.example  pyproject.toml  seed.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 3dab412f29c6_initial.py  a1b2c3d4e5f6_add_auth_columns_to_users.py  a2b3c4d5e6f7_sofa_loan_lifecycle.py  b2c3d4e5f6a7_replace_village_fk_with_village_name.py  c3d4e5f6a7b8_add_opening_bank_balance_to_groups.py  d4e5f6a7b8c9_add_sofa_columns_to_month_entries.py  e5f6a7b8c9d0_add_village_names_and_meeting_day.py  f6a7b8c9d0e1_add_abbreviation_to_villages.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  groups.py  month_entries.py  reports.py  sofa_loans.py  villages.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  extraction_run.py  group.py  month_entry.py  month_entry_image.py  sofa_loan.py  sofa_loan_entry.py  user.py  village.py
backend/app/schemas/: auth.py  common.py  group.py  month_entry.py  report.py  sofa_loan.py  sofa_loan_entry.py  village.py
backend/app/services/: validation.py
backend/scripts/: import_savings.py
backend/tests/: conftest.py  test_month_entry_flow.py
docs/: flow-and-api-ascii.md  flow-diagrams.md  solution-architecture.md  ui-flow-proposals.md  ui-mockup.html  warning-logic.txt
frontend/: README.md  l10n.yaml  pubspec.yaml
scripts/: pre-commit.py
(+68 files in other folders)
