[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sittilingi-shg-backend"
version = "0.1.0"
description = "FastAPI backend for the Sittilingi SHG portal"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "alembic>=1.13.2",
  "python-multipart>=0.0.9",
  "bcrypt>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
